# cattlehorses

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  WORKER_ONLY_TEST.md  openapi-v2.yaml  package-lock.json  package.json  test_watch_smoke.py
.githooks/: commit-msg
backend/: package-lock.json  package.json
cli/: README.md
dashboard/: index.html  landing.html  product.html  repository.html
deploy/: dashboard-e2e.py  dashboard-multiworker-e2e.py  measure-ttft.sh  nginx.agent.conf  onboarding-smoke.py  pm-workflow-e2e.py  rollback.sh  setup.sh  smoke.sh  sync-all.sh  verify.sh  zz-agent-backend.service  zz-agent.env.example
docs/: api-cookbook.md  api-surface-freeze.md  architecture.md  autonomous-loop.md  harness-adaptation.md  multi-agent-parallel.md  pm-workflow.md  runtime-demo.md  worker-setup.md
scripts/: autonomous-improvement-loop.py  autonomous-loop-watchdog.sh  autonomous-round.sh  check-auth-matrix.sh  check-commit-conv.sh  check-dashboard-scope-gate.js  check-dashboard-syntax.js  check-trace-panel.js  codex-exec-protect.sh  generate-changelog.ts  generate-openapi.ts  golden-path-smoke.sh  nas-lan-e2e-dryrun.sh  nas-lan-e2e-merge-json-check.sh  nas-lan-multiworker-e2e.sh  proof-sentinel-409.py  smoke-project-space-audit-export.js  smoke-project-space-branch-compare.js  smoke-project-space-branch-context.js  smoke-project-space-branch-management.js  smoke-project-space-branch-policy.js  smoke-project-space-branch-protection-rules.js  (+46 more)
sdk/python/: README.md  pyproject.toml
sdk/python/zz_agent/: client.py
(+180 files in other folders)
