[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zz-agent"
version = "0.2.0"
description = "Python SDK for the zz-agent API — Agent Collaboration OS"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/ozxc44/cattlehorses"
Source = "https://github.com/zhuzeyang/zz-agent"

[tool.setuptools.packages.find]
include = ["zz_agent*"]
